--- a/json/project.json
+++ b/json/project.json
@@ -34,7 +34,7 @@
     "_id": "31655518-db2b-4727-bbaa-bf06c78417cb",
     "name": "Design Patterns",
     "image": "images/DesignPatterns.png",
-    "desc": "Project Description: This project/learning period was a time spent studying object oriented design patterns and their applications to software solutions being built both in and out of class. We studied common patterns such as facade, strategy, iterator, singleton, and more. Overall, this learning period taught the importance of organizing code and creating space for reusibility.",
+    "desc": "This project was a learning period was a time spent studying object oriented design patterns and their applications to software solutions being built both in and out of class. We studied common patterns such as facade, strategy, iterator, singleton, and more. Overall, this learning period taught the importance of organizing code and creating space for reusibility.",
     "skills": [
       "Design Patterns",
       "Inheritance",
